--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\DiscussionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -179,9 +180,11 @@
     <Compile Include="Models\Discussion\DiscussionListingModel.cs" />
     <Compile Include="Models\Discussion\DiscussionTopicModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PostReply\PostReplyModel.cs" />
     <Compile Include="Models\Post\PostListingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Models\Post\PostIndexModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -241,6 +244,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Discussion\GetAllDiscussions.cshtml" />
     <Content Include="Views\Discussion\Topic.cshtml" />
+    <Content Include="Views\Post\GetPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
