--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\DiscussionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -176,21 +177,16 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Discussion\DiscussionIndexModel.cs" />
-    <Compile Include="Models\Discussion\DiscussionListingModel.cs" />
-    <Compile Include="Models\Discussion\DiscussionTopicModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\PostReply\PostReplyModel.cs" />
-    <Compile Include="Models\Post\PostListingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Models\Post\PostIndexModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\styles\custom.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -243,11 +239,15 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Discussion\GetAllDiscussions.cshtml" />
-    <Content Include="Views\Discussion\Topic.cshtml" />
     <Content Include="Views\Post\GetPost.cshtml" />
+    <Content Include="Views\Discussion\Topic.cshtml" />
+    <Content Include="Views\Book\GetAllBooks.cshtml" />
+    <Content Include="Views\Book\GetBookId.cshtml" />
+    <Content Include="Views\Book\GetDiscussionsbyBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
