--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\DiscussionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -244,6 +245,7 @@
     <Content Include="Views\Book\GetDiscussionsbyBook.cshtml" />
     <Content Include="Views\Post\GetPost.cshtml" />
     <Content Include="Views\Discussion\GetPostsByDiscussion.cshtml" />
+    <Content Include="Views\Admin\AddPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
