Adams Push - Add Post to Discussion Board with Id

--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AuthorController.cs" />
     <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\ChallengeController.cs" />
@@ -260,6 +261,7 @@
     <Content Include="Views\Challenge\GetChallenges.cshtml" />
     <Content Include="Views\Challenge\AddChallenge.cshtml" />
     <Content Include="Views\Challenge\_ChallengeTable.cshtml" />
+    <Content Include="Views\Admin\AddPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
