--- a/BookClub.Data/BookClub.Data.csproj
+++ b/BookClub.Data/BookClub.Data.csproj
@@ -68,13 +68,9 @@
     <Compile Include="IDAO\IChallengeDAO.cs" />
     <Compile Include="IDAO\IDiscussionDAO.cs" />
     <Compile Include="IDAO\IPostDAO.cs" />
-    <Compile Include="Migrations\202004281238476_Restarted migrations.cs" />
-    <Compile Include="Migrations\202004281238476_Restarted migrations.Designer.cs">
-      <DependentUpon>202004281238476_Restarted migrations.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202004281540100_Nullable Datetime in Challenges.cs" />
-    <Compile Include="Migrations\202004281540100_Nullable Datetime in Challenges.Designer.cs">
-      <DependentUpon>202004281540100_Nullable Datetime in Challenges.cs</DependentUpon>
+    <Compile Include="Migrations\202004291227594_Reset Database.cs" />
+    <Compile Include="Migrations\202004291227594_Reset Database.Designer.cs">
+      <DependentUpon>202004291227594_Reset Database.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
@@ -91,19 +87,16 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202004281238476_Restarted migrations.resx">
-      <DependentUpon>202004281238476_Restarted migrations.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202004281540100_Nullable Datetime in Challenges.resx">
-      <DependentUpon>202004281540100_Nullable Datetime in Challenges.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Custom_Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Custom_Scripts\jquery-1.8.0.js" />
     <Content Include="Custom_Scripts\jquery-1.8.0.min.js" />
     <Content Include="Custom_Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Custom_Scripts\jquery.unobtrusive-ajax.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202004291227594_Reset Database.resx">
+      <DependentUpon>202004291227594_Reset Database.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
