--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -180,6 +180,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Discussion\NewDiscussion.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Post\NewPost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -262,6 +263,7 @@
     <Content Include="Views\Challenge\AddChallenge.cshtml" />
     <Content Include="Views\Challenge\_ChallengeTable.cshtml" />
     <Content Include="Views\Admin\AddPost.cshtml" />
+    <Content Include="Views\Admin\AddDiscussion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
