--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -201,6 +201,7 @@
     <Content Include="Content\styles\custom.css" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\Custom_Scripts\ChallengeTable.js" />
+    <Content Include="Scripts\Custom_Scripts\CheckBoxListener.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
