Added method GetReviewByBook incorporating partial view

--- a/BookClub.Data/BookClub.Data.csproj
+++ b/BookClub.Data/BookClub.Data.csproj
@@ -63,14 +63,24 @@
     <Compile Include="DAO\ChallengeDAO.cs" />
     <Compile Include="DAO\DiscussionDAO.cs" />
     <Compile Include="DAO\PostDAO.cs" />
+    <Compile Include="DAO\ReviewDAO.cs" />
     <Compile Include="IDAO\IAuthorDAO.cs" />
     <Compile Include="IDAO\IBookDAO.cs" />
     <Compile Include="IDAO\IChallengeDAO.cs" />
     <Compile Include="IDAO\IDiscussionDAO.cs" />
     <Compile Include="IDAO\IPostDAO.cs" />
-    <Compile Include="Migrations\202004291227594_Reset Database.cs" />
-    <Compile Include="Migrations\202004291227594_Reset Database.Designer.cs">
-      <DependentUpon>202004291227594_Reset Database.cs</DependentUpon>
+    <Compile Include="IDAO\IReviewDAO.cs" />
+    <Compile Include="Migrations\202005021508448_new Database.cs" />
+    <Compile Include="Migrations\202005021508448_new Database.Designer.cs">
+      <DependentUpon>202005021508448_new Database.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005021541128_Added Review Model.cs" />
+    <Compile Include="Migrations\202005021541128_Added Review Model.Designer.cs">
+      <DependentUpon>202005021541128_Added Review Model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005021613291_Added collection of reviews in Book.cs" />
+    <Compile Include="Migrations\202005021613291_Added collection of reviews in Book.Designer.cs">
+      <DependentUpon>202005021613291_Added collection of reviews in Book.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
@@ -80,6 +90,7 @@
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Models\PostReply.cs" />
+    <Compile Include="Models\Review.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -94,8 +105,14 @@
     <Content Include="Custom_Scripts\jquery.unobtrusive-ajax.min.js" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202004291227594_Reset Database.resx">
-      <DependentUpon>202004291227594_Reset Database.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202005021508448_new Database.resx">
+      <DependentUpon>202005021508448_new Database.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005021541128_Added Review Model.resx">
+      <DependentUpon>202005021541128_Added Review Model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005021613291_Added collection of reviews in Book.resx">
+      <DependentUpon>202005021613291_Added collection of reviews in Book.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
