--- a/BookClub.Service/BookClub.Service.csproj
+++ b/BookClub.Service/BookClub.Service.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\ApplicationUserService.cs" />
     <Compile Include="Service\AuthorService.cs" />
     <Compile Include="Service\BookService.cs" />
     <Compile Include="Service\ChallengeService.cs" />
