--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ BookClub.Data/bin/
 
 BookClub.Service/obj/
 BookClub.Service/bin/
+*.cs
+/packages/Microsoft.AspNet.WebApi.Client.5.2.3
+/packages
+/BookClub/Views/Challenges
