--- a/BookClub.Data/BookClub.Data.csproj
+++ b/BookClub.Data/BookClub.Data.csproj
@@ -58,37 +58,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="DAO\ApplicationUserDAO.cs" />
     <Compile Include="DAO\AuthorDAO.cs" />
     <Compile Include="DAO\BookDAO.cs" />
     <Compile Include="DAO\ChallengeDAO.cs" />
     <Compile Include="DAO\DiscussionDAO.cs" />
     <Compile Include="DAO\PostDAO.cs" />
     <Compile Include="DAO\ReviewDAO.cs" />
+    <Compile Include="IDAO\IApplicationUserDAO.cs" />
     <Compile Include="IDAO\IAuthorDAO.cs" />
     <Compile Include="IDAO\IBookDAO.cs" />
     <Compile Include="IDAO\IChallengeDAO.cs" />
     <Compile Include="IDAO\IDiscussionDAO.cs" />
     <Compile Include="IDAO\IPostDAO.cs" />
     <Compile Include="IDAO\IReviewDAO.cs" />
-    <Compile Include="Migrations\202005021508448_new Database.cs" />
-    <Compile Include="Migrations\202005021508448_new Database.Designer.cs">
-      <DependentUpon>202005021508448_new Database.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202005021541128_Added Review Model.cs" />
-    <Compile Include="Migrations\202005021541128_Added Review Model.Designer.cs">
-      <DependentUpon>202005021541128_Added Review Model.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202005021613291_Added collection of reviews in Book.cs" />
-    <Compile Include="Migrations\202005021613291_Added collection of reviews in Book.Designer.cs">
-      <DependentUpon>202005021613291_Added collection of reviews in Book.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202005021933541_Added Virtual Book Book to Review.cs" />
-    <Compile Include="Migrations\202005021933541_Added Virtual Book Book to Review.Designer.cs">
-      <DependentUpon>202005021933541_Added Virtual Book Book to Review.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202005031054497_Removed Nullable Datetime in Review.cs" />
-    <Compile Include="Migrations\202005031054497_Removed Nullable Datetime in Review.Designer.cs">
-      <DependentUpon>202005031054497_Removed Nullable Datetime in Review.cs</DependentUpon>
+    <Compile Include="Migrations\202005041257158_database update.cs" />
+    <Compile Include="Migrations\202005041257158_database update.Designer.cs">
+      <DependentUpon>202005041257158_database update.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
@@ -113,20 +99,8 @@
     <Content Include="Custom_Scripts\jquery.unobtrusive-ajax.min.js" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202005021508448_new Database.resx">
-      <DependentUpon>202005021508448_new Database.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202005021541128_Added Review Model.resx">
-      <DependentUpon>202005021541128_Added Review Model.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202005021613291_Added collection of reviews in Book.resx">
-      <DependentUpon>202005021613291_Added collection of reviews in Book.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202005021933541_Added Virtual Book Book to Review.resx">
-      <DependentUpon>202005021933541_Added Virtual Book Book to Review.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202005031054497_Removed Nullable Datetime in Review.resx">
-      <DependentUpon>202005031054497_Removed Nullable Datetime in Review.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202005041257158_database update.resx">
+      <DependentUpon>202005041257158_database update.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
