--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\ChallengeController.cs" />
     <Compile Include="Controllers\CommunityController.cs" />
     <Compile Include="Controllers\DiscussionController.cs" />
+    <Compile Include="Controllers\FavouritesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PostController.cs" />
@@ -184,6 +185,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Community\CommunityModel.cs" />
+    <Compile Include="Models\Favourites\FavouriteBooks.cs" />
     <Compile Include="Models\JointViews\BookDiscussionModel.cs" />
     <Compile Include="Models\Book\NewBook.cs" />
     <Compile Include="Models\JointViews\BookReviewModel.cs" />
