--- a/BookClub.Service/BookClub.Service.csproj
+++ b/BookClub.Service/BookClub.Service.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Service\ChallengeService.cs" />
     <Compile Include="Service\DiscussionService.cs" />
     <Compile Include="Service\PostService.cs" />
+    <Compile Include="Service\ReplyService.cs" />
     <Compile Include="Service\ReviewService.cs" />
   </ItemGroup>
   <ItemGroup>
