--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -308,6 +308,7 @@
     <Content Include="Views\UserAdmin\ManageUserRoles.cshtml" />
     <Content Include="Views\UserAdmin\GetRolesforUser.cshtml" />
     <Content Include="Views\UserAdmin\GetRolesforUserConfirmed.cshtml" />
+    <Content Include="Views\Admin\AddBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
