--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -311,6 +311,7 @@
     <Content Include="Views\UserAdmin\GetRolesforUserConfirmed.cshtml" />
     <Content Include="Views\Admin\AddBook.cshtml" />
     <Content Include="Views\Post\DeletePost.cshtml" />
+    <Content Include="Views\Post\DeleteReply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
