--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -228,6 +228,7 @@
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\Custom_Scripts\ChallengeTable.js" />
     <Content Include="Scripts\Custom_Scripts\CheckBoxListener.js" />
+    <Content Include="Scripts\Custom_Scripts\PostReply\BuildReplyTable.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
@@ -312,6 +313,8 @@
     <Content Include="Views\Admin\AddBook.cshtml" />
     <Content Include="Views\Post\DeletePost.cshtml" />
     <Content Include="Views\Post\DeleteReply.cshtml" />
+    <Content Include="Views\Post\AjaxPost.cshtml" />
+    <Content Include="Views\Post\_postTable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
